deployment/deployment.yaml
# Creating MLflow deployment
apiVersion: apps/v1
kind: Deployment
metadata:
  name: satellite-images-model-deployment
spec:
  replicas: 30
  selector:
    matchLabels:
      app: satellite-images-model-deployment
  template:
    metadata:
      labels:
        app: satellite-images-model-deployment
    spec:
      containers:
        - name: satellite-images-app
          image: inseefrlab/satellite-images-inference:v0.1.2
          imagePullPolicy: Always
          resources:
            limits:
              memory: "50Gi"
              cpu: "90000m"
            requests:
              memory: "20Gi"
              cpu: "1000m"
          workers: 32
          workerTimeout: 3600
