deployment/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: satellite-images-model-service
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
      name: http
  selector:
    app: satellite-images-model-deployment
